# 2D-COVID-Classification

./: .gitignore  pyproject.toml
Classifier/: histogram.py  models.py
Documentation/: histograms.md  models.md
