[tool.poetry]
name = "uw-covid-classification"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
numpy = "^1.25.2"
tensorflow = "^2.13.0"
xgboost = "^2.0.0"
scikit-learn = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
